package home;

public interface BurguerBuilder {
   public void buildBread();
    public void buildMeat();
    public void buildToppings();
    public void buildCheese();
    public Burguer getBurguer();
}
